Fix AzureBlobStore regression due to wrong netty version after dependencyConvergence maven rule
Fix `netty.version` to `4.1.41.Final` defined in the
`dependencyConvergence` maven profile, which is enabled by default and
ensures a single version of each dependency is configured.

Add tests to ensure the GWC Azure blob store works.